# FRIS

./: README.md  content.tex  pyproject.toml  run_experiments.py  setup.sh
src/fris/: __init__.py  __main__.py  paper_figures.py
src/yac_sim/: README.txt  __main__.py
src/yac_sim/common/: config.py  kalman.py  sim_single.py
src/yac_sim/experiments/: exp2_trace_not_enough.py  paper1.py
src/yac_sim/policies/: __init__.py  dp_feature.py  dp_trace.py
