[project]
name = "fris"
version = "0.1.0"
description = "Finite-horizon Information-State Communication Scheduling (FRIS) simulations."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]

[project.scripts]
fris = "fris.paper_figures:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fris"]
